# col733-cloud

./: .gitignore  README.md  compute-dsm.md  compute-dstreams.md  compute-flink.md  compute-mr.md  compute-ray.md  compute-rdd.md  compute-scalability.md  compute-tf-graph.md  compute-tf.md  compute-vc.md  storage-craq.md  storage-dynamo.md  storage-ec.md  storage-gfs.md  storage-raft.md  storage-spanner.md  storage-zookeeper.md  virt-cpu.md  virt-io.md  virt-mem.md  why-cloud.md
demos/: ray_lcs.py  ray_mr.py  ray_ps.py  spark.md  tf.md  tf.py
labs/lab1/: README.md  instructions.md  redis.md  serial.py  split_csv.py
labs/lab1/starter_code/: base.py  checkpoint.py  client.py  config.json  config.py  mrds.py  mylib.lua  requirements.txt  worker.py
labs/lab2/: .gitignore  README.md  _coordinator.py  checker.py  constants.py  coordinator.py  generator.py  main.py  mapper.py  message.py  mrds.py  mylog.py  reducer.py  requirements.txt  seq.py  zip.sh
labs/lab2/docs/: deliverables.md
labs/lab2/evaluation/: .gitignore  Readme.md  grade_log.py  lab2_eval.py  locations.py  pivot.py
labs/lab3/: Makefile  README.md  requirements.txt
labs/lab3/core/: cluster.py  logger.py  message.py  network.py  server.py  socket_helpers.py
labs/lab3/cr/: cr_cluster.py  cr_server.py  cr_test.py
labs/lab3/craq/: craq_cluster.py  craq_server.py  craq_test.py
labs/lab3/lcheck/: go.mod  (+3 more)
labs/lab4/: .gitignore
labs/lab4/evaluation/base/: pyproject.toml
labs/lab4/evaluation/base/bayou/: app.py  cluster.py  ctrlmsg.py  storage.py
labs/lab4/evaluation/base/core/: cluster.py  logger.py  socket_helpers.py
project/: README.md
(+23 files in other folders)
